Bug 103612 - ToC is never shown in Master Document if it is in ODT in a section with a hide condition
Summary: ToC is never shown in Master Document if it is in ODT in a section with a hid...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.3.0 target:7.2.2
Keywords:
Depends on:
Blocks: Writer-Master-Doc
  Show dependency treegraph
 
Reported: 2016-10-31 22:14 UTC by Mike Kaganski
Modified: 2021-09-03 12:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Master referencing document with section with hide condition (30.29 KB, application/x-zip-compressed)
2016-10-31 22:14 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2016-10-31 22:14:30 UTC
Created attachment 128392 [details]
Master referencing document with section with hide condition

ToC is never shown in Master Document, if it is in ODT in a section with a hide condition. It will not be shown even if the condition is false. However, simple text located in the same section is shown in master document.

To reproduce, extract the attachment in a directory, and open DUMMY.odm. The other two ODT files are referenced from that master document, and are identical except second doesn't have a hide condition for its section. The master document doesn't show ToC from first document, (though simple text from that section is visible) but shows ToC for second document. The condition for first document's section is DUMMY1 != 0; this condition is false (as apparent if the first document is opened itself);  there's no User Field named DUMMY1 which is equivalent to it being 0; and even explicitly defining the User Field equal to 0 doesn't resolve the issue.

Reproducible with:
* Version: 5.2.3.3 (x64)
Build ID: d54a8868f08a7b39642414cf2c8ef2f228f780cf
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
Locale: en-US (ru_RU); Calc: group
* Version: 5.3.0.0.alpha1+
Build ID: c3043a3072465c489d3b20991b17d222771305eb
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; Layout Engine: old; Locale: ru-RU (ru_RU); Calc: group
* Version: 5.2.2.2
Build ID: 1:5.2.2-0ubuntu1~xenial0
CPU Threads: 1; OS Version: Linux 4.4; UI Render: default; 
Locale: en-US (en_US.UTF-8); Calc: group
-> OS: All
Already reproducible with: OOo 3.3.0 OOO330m20 (Build:9567) -> inherited from OOo.
Comment 1 Xisco Faulí 2016-11-02 09:06:59 UTC
Confirmed in

- Version: 5.3.0.0.alpha1+
Build ID: 64d3bd38c9242c1cc114f6e68bf13475ef679b73
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; VCL: gtk2; Layout Engine: old; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

- Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

- Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 2 QA Administrators 2018-05-13 02:30:27 UTC Comment hidden (obsolete)
Comment 3 Mike Kaganski 2018-05-13 07:07:45 UTC
Still reproducible with Version: 6.0.4.2 (x64)
Build ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
CPU threads: 12; OS: Windows 10.0; UI render: GL; 
Locale: ru-RU (ru_RU); Calc: CL
Comment 4 QA Administrators 2019-05-14 02:56:36 UTC Comment hidden (obsolete)
Comment 5 Buovjaga 2021-05-05 11:33:36 UTC
Still repro with 7.2
Comment 6 Commit Notification 2021-08-30 18:13:42 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/91b0024965908c692bea40f47c58ea9d1bf8a596

tdf#103612 sw: fix confusing inheritance of section hidden flag

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2021-08-30 18:15:16 UTC
fixed on master
Comment 8 Commit Notification 2021-08-31 19:02:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/6325c1a6d38ce3a67e6b4b538d1852fa5fc9cb3b

tdf#103612 sw: fix confusing inheritance of section hidden flag

It will be available in 7.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2021-09-03 12:23:19 UTC
Verified, thanks!

Arch Linux 64-bit
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 104847ed014e95a915d314de7091c7d572eade67
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 3 September 2021