tdf#103612 sw: fix confusing inheritance of section hidden flag

SwSectionData has 3 confusing boolean members for hiding:
* m_bHidden corresponds to the Hide checkbox in the UI
* m_bCondHiddenFlag stores the result of evaluating the hide condition
* m_bHiddenFlag is the final computed result that indicates that this
  section is hidden

Now, the first 2 flags determine m_bHiddenFlag = true, but there's
another possibility: m_bHiddenFlag is also true if there is a parent
section for which m_bHiddenFlag is true (because of course this hides
all section content including nested sections)... the latter situation
is apparently handled in SwSectionFormat::UpdateParent().

The code in SwSection::SwSection() checks the parent's m_bHiddenFlag but
then sets the child's m_bHidden, which looks very wrong, so remove this.

Also adapt 2 other places that look like they should be checking a
different flag.

Change-Id: I58d9c878b58ad6cd878f450072178006b4c7ebb6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121314
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>